--- a/styles/scss/imports/_works.scss
+++ b/styles/scss/imports/_works.scss
@@ -23,7 +23,7 @@
     margin: 0 auto;
 
     .position {
-      font-family: "Brilon";
+      font-family: 'Brilon';
       letter-spacing: 0.5em;
       text-align: center;
       margin-right: -0.85em;
@@ -129,6 +129,10 @@
     margin-top: 80px;
 
     @media (min-width: 1200px) {
+      margin-top: 30px;
+    }
+
+    @media (min-width: 1380px) {
       margin-top: 0;
     }
 
@@ -173,17 +177,13 @@
     }
 
     &::after {
-      content: "";
+      content: '';
       position: absolute;
       top: 0;
       left: 0;
       width: 100%;
       height: 100%;
-      background: linear-gradient(
-        0deg,
-        rgba(22, 16, 50, 1) 0%,
-        rgba(22, 16, 50, 0) 100%
-      );
+      background: linear-gradient(0deg, rgba(22, 16, 50, 1) 0%, rgba(22, 16, 50, 0) 100%);
     }
   }
 
