--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -1,9 +1,10 @@
-@import "imports/fonts";
-@import "imports/variables";
-@import "imports/global";
-@import "imports/header";
-@import "imports/home";
-@import "imports/works";
-@import "imports/skills";
-@import "imports/about";
-@import "imports/404";
+@import 'imports/fonts';
+@import 'imports/variables';
+@import 'imports/global';
+@import 'imports/header';
+@import 'imports/home';
+@import 'imports/works';
+@import 'imports/single-work';
+@import 'imports/skills';
+@import 'imports/about';
+@import 'imports/404';
