--- a/styles/scss/imports/_header.scss
+++ b/styles/scss/imports/_header.scss
@@ -1,3 +1,7 @@
+.header-container {
+  position: relative;
+  z-index: 1000;
+}
 header {
   width: 100%;
   height: 80px;
@@ -31,7 +35,7 @@ header {
         }
 
         &::after {
-          content: "";
+          content: '';
           position: absolute;
           display: block;
           width: 25px;
@@ -47,7 +51,7 @@ header {
         }
 
         &::before {
-          content: "";
+          content: '';
           position: absolute;
           display: block;
           width: 5px;
