--- a/styles/scss/imports/_works.scss
+++ b/styles/scss/imports/_works.scss
@@ -5,6 +5,11 @@
   justify-content: center;
   align-items: center;
 
+  .slider-works {
+    height: 100%;
+    width: 100%;
+  }
+
   .main-title {
     margin: 0 auto -60px;
 
@@ -15,12 +20,47 @@
     }
   }
 
+  .swiper {
+    height: 100vh;
+    margin-top: -80px;
+    overflow: hidden;
+
+    .swiper-slide {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      overflow: hidden;
+    }
+  }
+
   .navigation {
+    position: absolute;
+    margin: auto;
+    left: 0;
+    right: 0;
+    z-index: 10;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 16.666666vw;
     margin: 0 auto;
+    margin-top: calc(50vh - 340px);
+    width: 90vw;
+
+    @media (min-width: 1920px) {
+      margin-top: calc(50vh - 400px);
+    }
+
+    @media (min-width: 576px) {
+      width: 50vw;
+    }
+
+    @media (min-width: 992px) {
+      width: 33.333333vw;
+    }
+
+    @media (min-width: 1500px) {
+      width: 16.666666vw;
+    }
 
     .position {
       font-family: 'Brilon';
@@ -159,20 +199,20 @@
   }
 
   .bg {
-    position: fixed;
-    width: 100%;
-    height: 100%;
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
     top: 0;
     left: 0;
+    opacity: 0;
     z-index: -1;
-    opacity: 0.1;
     transition: opacity 0.6s ease-out;
     animation: zoomInAndOut 12s ease-in-out infinite alternate;
     -webkit-animation: zoomInAndOut 12s ease-in-out infinite alternate;
 
     img {
-      width: 100%;
-      height: 100%;
+      width: 100vw;
+      height: 100vh;
       object-fit: cover;
     }
 
@@ -181,9 +221,20 @@
       position: absolute;
       top: 0;
       left: 0;
-      width: 100%;
-      height: 100%;
+      width: 100vw;
+      height: 100vh;
       background: linear-gradient(0deg, rgba(22, 16, 50, 1) 0%, rgba(22, 16, 50, 0) 100%);
+    }
+  }
+  .content-slide {
+    opacity: 0;
+  }
+  .swiper-slide-visible {
+    .bg {
+      opacity: 0.3;
+    }
+    .content-slide {
+      opacity: 1;
     }
   }
 
