--- a/styles/scss/imports/_works.scss
+++ b/styles/scss/imports/_works.scss
@@ -46,6 +46,10 @@
     margin-top: calc(50vh - 340px);
     width: 90vw;
 
+    @media (min-width: 1200px) {
+      margin-top: calc(50vh - 370px);
+    }
+
     @media (min-width: 1920px) {
       margin-top: calc(50vh - 400px);
     }
@@ -178,6 +182,9 @@
 
     .subtitle {
       text-align: center;
+      @media (max-width: 1921px) {
+        margin-top: 40px;
+      }
     }
 
     .svg-container {
@@ -207,8 +214,8 @@
     opacity: 0;
     z-index: -1;
     transition: opacity 0.6s ease-out;
-    animation: zoomInAndOut 12s ease-in-out infinite alternate;
-    -webkit-animation: zoomInAndOut 12s ease-in-out infinite alternate;
+    animation: zoomInAndOut 6s ease-in-out infinite alternate;
+    -webkit-animation: zoomInAndOut 6s ease-in-out infinite alternate;
 
     img {
       width: 100vw;
