--- a/styles/scss/imports/_single-work.scss
+++ b/styles/scss/imports/_single-work.scss
@@ -7,6 +7,7 @@
   .button-container {
     margin-top: 20px;
     margin-bottom: 50px;
+    text-align: center;
 
     @media (min-width: 576px) {
       margin-top: -20px;
@@ -111,8 +112,8 @@
   }
 
   .swiper {
-    @media (min-width: 576px) {
-      padding: 0 25%;
+    @media (max-width: 575px) {
+      padding: 0 10%;
     }
   }
 
