--- a/styles/style.css
+++ b/styles/style.css
@@ -1006,6 +1006,7 @@ header ul li:last-child a::before {
 .single-work .button-container {
   margin-top: 20px;
   margin-bottom: 50px;
+  text-align: center;
 }
 @media (min-width: 576px) {
   .single-work .button-container {
@@ -1098,9 +1099,9 @@ header ul li:last-child a::before {
   height: 100vh;
   background: linear-gradient(0deg, rgb(22, 16, 50) 0%, rgba(22, 16, 50, 0) 100%);
 }
-@media (min-width: 576px) {
+@media (max-width: 575px) {
   .single-work .swiper {
-    padding: 0 25%;
+    padding: 0 10%;
   }
 }
 .single-work .swiper-wrapper {
