--- a/styles/scss/imports/_works.scss
+++ b/styles/scss/imports/_works.scss
@@ -5,6 +5,19 @@
   justify-content: center;
   align-items: center;
 
+  .slide-title {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    z-index: 9;
+  }
+
   .slider-works {
     height: 100%;
     width: 100%;
@@ -38,25 +51,11 @@
   }
 
   .navigation {
-    position: absolute;
-    margin: auto;
-    left: 0;
-    right: 0;
-    z-index: 10;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 0 auto;
-    margin-top: calc(50vh - 280px);
+    margin: 0 auto 15px;
     width: 90vw;
-
-    @media (min-width: 1200px) {
-      margin-top: calc(50vh - 310px);
-    }
-
-    @media (min-width: 1920px) {
-      margin-top: calc(50vh - 300px);
-    }
 
     @media (min-width: 576px) {
       width: 50vw;
@@ -105,10 +104,12 @@
             transform-origin: left center;
             transform: rotate(45deg);
           }
+
           &:nth-child(2) {
             transform-origin: left center;
             transform: rotate(-45deg);
           }
+
           &:last-child {
             height: 1px;
             width: 60px;
@@ -174,22 +175,15 @@
   }
 
   .button-container {
-    margin-top: 80px;
+    margin-top: 0;
 
-    @media (max-width: 767px) {
-      margin-top: 30px;
-    }
-
-    @media (min-width: 1200px) {
-      margin-top: 30px;
-    }
-
-    @media (min-width: 1380px) {
-      margin-top: 0;
+    > span {
+      opacity: 1;
     }
 
     .subtitle {
       text-align: center;
+
       @media (max-width: 1921px) {
         margin-top: 40px;
       }
@@ -256,17 +250,13 @@
     }
   }
 
-  .content-slide {
-    opacity: 0;
-  }
-
   .swiper-slide {
     padding-top: 140px;
   }
 
   .swiper-slide-visible {
     .bg {
-      opacity: 0.3;
+      opacity: 0.6;
     }
     .content-slide {
       opacity: 1;
