--- a/styles/scss/imports/_global.scss
+++ b/styles/scss/imports/_global.scss
@@ -25,18 +25,6 @@ body {
     -ms-overflow-style: none; /* IE and Edge */
     scrollbar-width: none; /* Firefox */
   }
-
-  &::after {
-    content: '';
-    display: block;
-    position: fixed;
-    width: 100%;
-    height: 100vh;
-    top: 0;
-    left: 0;
-    background: transparent url('/img/noise.webp') center/auto repeat;
-    z-index: -1;
-  }
 }
 
 main {
@@ -78,6 +66,11 @@ a {
     &.transparent {
       background-color: transparent;
       border-color: transparent;
+      backdrop-filter: none;
+
+      &:hover {
+        backdrop-filter: blur(40px) saturate(120%) brightness(100%);
+      }
     }
 
     &.has-line {
@@ -102,7 +95,7 @@ a {
       // background-color: rgba(255, 255, 255, 0.2);
 
       background-color: rgb(111 66 193 / 15%);
-      border-color: #6f42c1;
+      border-color: $color3;
 
       .line {
         transform: scaleY(0);
@@ -123,6 +116,50 @@ h6 {
 #__next,
 .light-container {
   height: 100%;
+}
+
+#__next {
+  &::after {
+    content: '';
+    display: block;
+    position: fixed;
+    width: 100%;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    background: transparent url('/img/noise.webp') center/auto repeat;
+    z-index: -1;
+  }
+}
+
+.bg-container-main {
+  .bg {
+    position: fixed;
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    opacity: 0.2;
+    z-index: -1;
+    transition: opacity 0.6s ease-out;
+    animation: zoomInAndOut 6s ease-in-out infinite alternate;
+    -webkit-animation: zoomInAndOut 6s ease-in-out infinite alternate;
+
+    img {
+      width: 100vw;
+      height: 100vh;
+      object-fit: cover;
+    }
+
+    &::after {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+    }
+  }
 }
 
 .light-container {
@@ -542,8 +579,8 @@ h6 {
     transition: border 0.3s ease-out, background-color 0.3s ease-out;
 
     &:hover {
-      background-color: rgb(111 66 193 / 15%);
-      border-color: #6f42c1;
+      background-color: rgb(111 66 193 / 7%);
+      border-color: $color3;
     }
   }
 
@@ -584,8 +621,8 @@ h6 {
         display: block;
         position: relative;
         width: 100%;
-        background-color: rgb(111 66 193 / 33%);
-        backdrop-filter: blur(15px) saturate(1.5);
+        background-color: rgb(111 66 193 / 15%);
+        backdrop-filter: blur(40px) saturate(120%) brightness(100%);
         border-radius: 50px;
         padding: 23px 0;
         overflow: hidden;
