--- a/styles/scss/imports/_single-work.scss
+++ b/styles/scss/imports/_single-work.scss
@@ -38,7 +38,8 @@
     padding: 0px 15px;
 
     @media (min-width: 992px) {
-      max-width: 83.33333333%;
+      max-width: 84.666666%;
+      padding: 0;
     }
 
     img {
@@ -75,28 +76,21 @@
     }
   }
 
-  .bg-container {
+  .bg-container-main {
     position: absolute;
     width: 100vw;
-    height: 100vh;
+    height: 101vh;
     top: 0;
     left: 0;
     z-index: -10;
 
     .bg {
       position: absolute;
-      width: 100vw;
-      height: 100vh;
-      opacity: 0.6;
-      // filter: blur(24px) saturate(1.2);
-      z-index: -1;
-      transition: opacity 0.6s ease-out;
-      animation: zoomInAndOut 12s ease-in-out infinite alternate;
-      -webkit-animation: zoomInAndOut 12s ease-in-out infinite alternate;
+      opacity: 0.2;
 
       img {
         width: 100vw;
-        height: 100vh;
+        height: 101vh;
         object-fit: cover;
       }
 
