--- a/styles/scss/imports/_variables.scss
+++ b/styles/scss/imports/_variables.scss
@@ -1,8 +1,9 @@
 $color1: #0f0b23;
 $color2: #161032;
-$color3: #1b998b;
-$color4: #d5a021;
+$color3: #6f42c1;
+$color4: #ffb400;
 $color5: #eeeeee;
+$color6: #1b998b;
 
 $radius: 25px;
 $anim: all 0.6s ease;
