--- a/styles/style.css
+++ b/styles/style.css
@@ -62,17 +62,6 @@ body {
   scrollbar-width: none;
   /* Firefox */
 }
-body::after {
-  content: "";
-  display: block;
-  position: fixed;
-  width: 100%;
-  height: 100vh;
-  top: 0;
-  left: 0;
-  background: transparent url("/img/noise.webp") center/auto repeat;
-  z-index: -1;
-}
 
 main {
   margin: 0 auto;
@@ -111,6 +100,12 @@ a.button span {
 a.button.transparent {
   background-color: transparent;
   border-color: transparent;
+  -webkit-backdrop-filter: none;
+          backdrop-filter: none;
+}
+a.button.transparent:hover {
+  -webkit-backdrop-filter: blur(40px) saturate(120%) brightness(100%);
+          backdrop-filter: blur(40px) saturate(120%) brightness(100%);
 }
 a.button.has-line {
   position: relative;
@@ -124,7 +119,7 @@ a.button.has-line .line {
   left: 0;
   top: calc(-100% + 10px);
   margin: auto;
-  background-color: #d5a021;
+  background-color: #ffb400;
   transform-origin: center bottom;
   transition: all 0.6s ease;
 }
@@ -148,6 +143,45 @@ h6 {
 #__next,
 .light-container {
   height: 100%;
+}
+
+#__next::after {
+  content: "";
+  display: block;
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  background: transparent url("/img/noise.webp") center/auto repeat;
+  z-index: -1;
+}
+
+.bg-container-main .bg {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  opacity: 0.2;
+  z-index: -1;
+  transition: opacity 0.6s ease-out;
+  animation: zoomInAndOut 6s ease-in-out infinite alternate;
+  -webkit-animation: zoomInAndOut 6s ease-in-out infinite alternate;
+}
+.bg-container-main .bg img {
+  width: 100vw;
+  height: 100vh;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.bg-container-main .bg::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
 }
 
 .light-container {
@@ -218,7 +252,7 @@ h6 {
   font-family: "Evossry";
   font-size: 12vw;
   line-height: 0;
-  color: #1b998b;
+  color: #6f42c1;
   cursor: default;
   transform-origin: top center;
 }
@@ -439,7 +473,7 @@ h6 {
 
 .subtitle {
   opacity: 0;
-  color: #d5a021;
+  color: #ffb400;
   font-size: 1.35em;
   text-transform: uppercase;
   letter-spacing: 0.3em;
@@ -510,7 +544,7 @@ h6 {
   left: 0;
   top: -30px;
   margin: auto;
-  background-color: #1b998b;
+  background-color: #6f42c1;
   transform: scaleY(0);
   transform-origin: center bottom;
   transition: all 0.6s ease;
@@ -525,7 +559,7 @@ h6 {
   transition: border 0.3s ease-out, background-color 0.3s ease-out;
 }
 .flip-card a:hover {
-  background-color: rgba(111, 66, 193, 0.15);
+  background-color: rgba(111, 66, 193, 0.07);
   border-color: #6f42c1;
 }
 .flip-card-wrapper {
@@ -566,9 +600,9 @@ h6 {
   display: block;
   position: relative;
   width: 100%;
-  background-color: rgba(111, 66, 193, 0.33);
-  -webkit-backdrop-filter: blur(15px) saturate(1.5);
-          backdrop-filter: blur(15px) saturate(1.5);
+  background-color: rgba(111, 66, 193, 0.15);
+  -webkit-backdrop-filter: blur(40px) saturate(120%) brightness(100%);
+          backdrop-filter: blur(40px) saturate(120%) brightness(100%);
   border-radius: 50px;
   padding: 23px 0;
   overflow: hidden;
@@ -628,7 +662,7 @@ h6 {
   left: 0;
   top: calc(-100% + 10px);
   margin: auto;
-  background-color: #d5a021;
+  background-color: #ffb400;
   transform-origin: center bottom;
   transition: all 0.6s ease;
 }
@@ -679,7 +713,7 @@ header ul li a::after {
   right: 0;
   bottom: 0;
   margin: auto;
-  background-color: #1b998b;
+  background-color: #6f42c1;
   transform-origin: center;
   transform: scaleX(0);
   transition: transform 0.3s ease-out;
@@ -698,7 +732,7 @@ header ul li a::before {
   background-color: #fff;
 }
 header ul li.active a:after {
-  background-color: #d5a021;
+  background-color: #ffb400;
   transform: scaleX(1);
 }
 header ul li:hover a:after {
@@ -833,7 +867,7 @@ header ul li:last-child a::before {
   display: block;
   width: 10px;
   height: 1px;
-  background-color: #d5a021;
+  background-color: #ffb400;
   transition: all 0.3s ease-out;
 }
 .page-works .navigation button .arrow > span:nth-child(1) {
@@ -898,6 +932,11 @@ header ul li:last-child a::before {
 @media (max-width: 1921px) {
   .page-works .button-container .subtitle {
     margin-top: 40px;
+  }
+}
+@media (max-width: 575px) {
+  .page-works .button-container .subtitle {
+    margin-top: 80px;
   }
 }
 @media (max-width: 767px) {
@@ -1020,7 +1059,8 @@ header ul li:last-child a::before {
 }
 @media (min-width: 992px) {
   .single-work .mockup-design {
-    max-width: 83.33333333%;
+    max-width: 84.666666%;
+    padding: 0;
   }
 }
 .single-work .mockup-design img {
@@ -1051,31 +1091,25 @@ header ul li:last-child a::before {
 .single-work .datas-container p br {
   display: none;
 }
-.single-work .bg-container {
+.single-work .bg-container-main {
   position: absolute;
   width: 100vw;
-  height: 100vh;
+  height: 101vh;
   top: 0;
   left: 0;
   z-index: -10;
 }
-.single-work .bg-container .bg {
+.single-work .bg-container-main .bg {
   position: absolute;
-  width: 100vw;
-  height: 100vh;
-  opacity: 0.6;
-  z-index: -1;
-  transition: opacity 0.6s ease-out;
-  animation: zoomInAndOut 12s ease-in-out infinite alternate;
-  -webkit-animation: zoomInAndOut 12s ease-in-out infinite alternate;
+  opacity: 0.2;
 }
-.single-work .bg-container .bg img {
+.single-work .bg-container-main .bg img {
   width: 100vw;
-  height: 100vh;
+  height: 101vh;
   -o-object-fit: cover;
      object-fit: cover;
 }
-.single-work .bg-container .bg::after {
+.single-work .bg-container-main .bg::after {
   content: "";
   position: absolute;
   top: 0;
@@ -1121,13 +1155,27 @@ header ul li:last-child a::before {
 }
 .page-skills .card-skill {
   display: block;
-  padding: 25px 40px 25px 0;
   line-height: 2.25;
+  padding: 25px 0;
 }
-.page-skills .card-skill img {
+@media (min-width: 992px) {
+  .page-skills .card-skill {
+    padding: 25px 40px 25px 0;
+  }
+}
+.page-skills .card-skill-wrapper {
+  padding: 25px;
+  border-radius: 25px;
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  background: rgba(255, 255, 255, 0.15);
+  -webkit-backdrop-filter: blur(40px) saturate(120%) brightness(100%);
+          backdrop-filter: blur(40px) saturate(120%) brightness(100%);
+}
+.page-skills .card-skill-wrapper img {
   margin-bottom: 30px;
 }
-.page-skills .card-skill .subtitle {
+.page-skills .card-skill-wrapper .subtitle {
+  font-size: 1em;
   margin-left: 0;
   margin-bottom: 15px;
 }
