--- a/styles/scss/imports/_global.scss
+++ b/styles/scss/imports/_global.scss
@@ -52,7 +52,7 @@ a {
     padding: 20px 15px;
     border-radius: 40px;
     text-align: center;
-    border: 1px solid white;
+    border: 1px solid rgba(255, 255, 255, 0.2);
     transition: $anim;
     max-width: 270px;
     backdrop-filter: blur(40px) saturate(120%) brightness(100%);
@@ -680,6 +680,15 @@ h6 {
     margin: 30px auto 10px;
     text-transform: uppercase;
     opacity: 0;
+  }
+
+  .content-wrapper {
+    width: 100%;
+    margin-top: 60px;
+    max-width: 700px;
+    text-align: center;
+    font-size: 1.15em;
+    padding: 0 15px;
   }
 }
 
