New title height fix + remove side_image on single work page

--- a/styles/scss/imports/_single-work.scss
+++ b/styles/scss/imports/_single-work.scss
@@ -45,6 +45,16 @@
         }
       }
     }
+
+    .content-wrapper {
+      @media (max-height: 919px) {
+        display: none;
+      }
+
+      @media (min-height: 920px) {
+        display: block;
+      }
+    }
   }
 
   .mockup-design {
