--- a/styles/scss/imports/_works.scss
+++ b/styles/scss/imports/_works.scss
@@ -224,6 +224,16 @@
         }
       }
     }
+
+    .content-wrapper {
+      @media (max-height: 919px) {
+        display: none;
+      }
+
+      @media (min-height: 920px) {
+        display: block;
+      }
+    }
   }
 
   .bg {
